cabal-version: >=1.10
name: jet-lang
version: 0.1.0.0
license: BSD3
license-file: LICENSE
maintainer: smt529@york.ac.uk
author: Steven Tomlinson
category: Language
build-type: Simple
extra-source-files:
    CHANGELOG.md

executable jet-lang
    main-is: Main.hs
    hs-source-dirs: src gen
    default-language: Haskell2010
    other-modules: 
        AbsJetGrammar,
        LexJetGrammar,
        ParJetGrammar,
        ErrM
    build-depends:
        base >=4.11 && <4.13,
        array -any,
        containers -any
